--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,32 @@
-body{
- height: 2000px;
- background: navy url(../img/deepsea.jpg) top center no-repeat fixed;
- background-size: cover;
+#container {
+	width: 50%;
+	margin: 0 auto;
 }
 
-#bubbles1, #bubbles2{
- width: 100%;
- height: 100%;
- top: 0;
- left: 0;
- position: fixed;
- z-index: -1;
- background: url(../img/bubbles1.png) 5% 50% no-repeat;
+* {
+	font-family: arial, sans-serif;
 }
- 
-#bubbles2{
- background: url(../img/bubbles3.png) 95% 90% no-repeat;
+
+.title{
+	margin-bottom: 100px;
+}
+a {
+	text-decoration:none;
+	background-color: lightgrey;
+	padding: 15px 40px;
+	font-size: 24px;
+	font-family: arial, sans-serif;
+	border-radius: 5px;
+	font-size: 24px;
+	transition: background-color 0.3s ease 0s;
+	display: inline-block;
+
+}
+
+a:hover{
+	background-color: darkgrey;
+}
+
+li {
+	list-style: none;
 }
