--- a/projects/parallax-01/css/style.css
+++ b/projects/parallax-01/css/style.css
@@ -1,6 +1,6 @@
 body{
  height: 1000px;
- background: navy url(../img/deepsea-sml.png) top center no-repeat fixed;
+ background: navy url(../img/bird-bg-sml.jpg) top center no-repeat fixed;
  background-size: cover;
 }
 
