--- a/projects/parallax-01/css/style.css
+++ b/projects/parallax-01/css/style.css
@@ -1,10 +1,7 @@
 body{
- height: 1000px;
- background: navy url(../img/bird-bg-sml.jpg) top center no-repeat fixed;
+ height: 2000px;
+ background: navy url(../img/deepsea.jpg) top center no-repeat fixed;
  background-size: cover;
-}
-
-#container{
 }
 
 #bubbles1, #bubbles2{
