--- a/projects/parallax-03/css/style.css
+++ b/projects/parallax-03/css/style.css
@@ -5,15 +5,15 @@ body{
 #container{
 	position: relative;
   top: 20%;
-  height: 600px;
+  height: 2000px;
   width:50%;
-  /*background: grey url(../img/bird-bg-sml.jpg) top left no-repeat fixed;*/
-  background-image: url(../img/bird-bg-sml.jpg);
   background-color: grey;
+ /* background-image: url(../img/bird-bg-sml.jpg);
+  
   background-size: auto 600px;
   background-position: top left;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: fixed;*/
 
   overflow:hidden;
   margin-left:3rem;
@@ -22,10 +22,12 @@ body{
 #back{
  width: 100%;
  height: 100%;
+  /*height:1188px;*/
  top: 0;
- left: 100px;
+ left: 0px;
  position: absolute;
- background: url(../img/back-bird.png) 5% 50% no-repeat;
+ background: url(../img/tile1/mobile-content.png) 5% 50% no-repeat;
+ background-size: auto auto;
 }
 
 #fore{
@@ -34,5 +36,6 @@ body{
  top: 145px;
  left: 0;
  position: absolute;
- background: url(../img/fore-bird-sml.png) 5% 50% no-repeat;
+ background: url(../img/tile1/mobile-phone.png) 5% 50% no-repeat;
+ background-size: auto auto;
 }
