--- a/projects/zoom/css/style.css
+++ b/projects/zoom/css/style.css
@@ -1,10 +1,10 @@
 body, html{
-  margin:0;
   width:100%;
- height:500vh;
 }
 
 .container {
+	position:relative;
+	top: 20%;
 	width: 94.02985075%;
 	max-width: 1260px;
 	background: #fff;
@@ -35,7 +35,7 @@ body, html{
 Transitions
 ==================================== */
 img {
-	transition: transform .5s cubic-bezier(.7,-0.39,.31,1.38); 
+	transition: transform .5s; 
 }
 
 img:hover {
